Added next version

--- a/newsletters/example/index.html
+++ b/newsletters/example/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style-articles.css">
+        <link rel="stylesheet" href="./style-articles.css">
+        <link rel="stylesheet" href="./style.css">
         <title>Example Newsletter</title>
     </head>
     <body>
