--- a/newsletters/index.html
+++ b/newsletters/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styling/style.css">
     <title>Newsletters</title>
 </head>
+
 <body>
     <ul id="newsletter-list">
-        <li><Link href="/example">{{newsletter.title}}</Link></li> (for newsletter in listdir("./"))
+        <li>
+            <Link href="/example">{{newsletter.title}}</Link>
+        </li> (for newsletter in listdir("./"))
     </ul>
     <div id="newsletter">
         <h1>{{selected-newsletter.title}}</h1>
         {{selected-newsletter.children}}
     </div>
 </body>
+
 </html>
